FEATURE: Start building the auth service

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -2,6 +2,13 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
+server:
+  port: 8181
+logging:
+  level:
+    root: INFO
+    org.springframework.cloud.gateway: TRACE
+    org.springframework.cloud.gateway.route.RouteDefinitionRouteLocator: INFO
 spring:
   application:
     name: Api-Gateway
@@ -11,4 +18,14 @@ spring:
         - id: auth-service
           uri: lb://auth-service
           predicates:
-            - Regex=/api/v[0-9]+/auth(/.*)
+            - Path=/api/{version}/auth/**
+        - id: discovery-server
+          uri: http://localhost:8761
+          predicates:
+            - Path=/eureka/web
+          filters:
+            - SetPath=/
+        - id: discovery-server-static
+          uri: http://localhost:8761
+          predicates:
+            - Path=/eureka/**
