--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -18,7 +18,10 @@ spring:
         - id: auth-service
           uri: lb://auth-service
           predicates:
-            - Path=/api/{version}/auth/**
+            - Path=/api/{version}/auth/**, /api/{version}/user/**
+          filters:
+            - AuthenticationFilter
+
         - id: discovery-server
           uri: http://localhost:8761
           predicates:
