--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
         <module>discovery-server</module>
         <module>api-gateway</module>
         <module>common-utilities</module>
+        <module>image-grpc-service</module>
+        <module>grpc-interface</module>
     </modules>
 
     <properties>
@@ -39,21 +41,4 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 </project>
