--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -89,6 +89,14 @@
             <artifactId>grpc-netty</artifactId>
             <version>1.56.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
