FEATURE: Module refactor; Send event messages on user creation.

--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -75,7 +75,7 @@
         </dependency>
         <dependency>
             <groupId>org.blossom.common</groupId>
-            <artifactId>common-utilities</artifactId>
+            <artifactId>auth-utilities</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
@@ -96,6 +96,17 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.blossom.common</groupId>
+            <artifactId>kafka-utilities</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+            <version>3.0.7</version>
         </dependency>
     </dependencies>
 
