--- a/common-utilities/pom.xml
+++ b/common-utilities/pom.xml
@@ -11,26 +11,15 @@
 
     <groupId>org.blossom.common</groupId>
     <artifactId>common-utilities</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>auth-utilities</module>
+        <module>kafka-utilities</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-oauth2-client</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-    </dependencies>
 </project>
