--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.1.0</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
     <groupId>org.blossom</groupId>
     <artifactId>blossom-backend</artifactId>
@@ -20,6 +20,9 @@
         <module>common-utilities</module>
         <module>image-grpc-service</module>
         <module>grpc-interface</module>
+        <module>common-utilities/kafka-utilities</module>
+        <module>common-utilities/auth-utilities</module>
+        <module>search-service</module>
     </modules>
 
     <properties>
