--- a/search-service/src/main/resources/application.yml
+++ b/search-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: Auth-Service
+    name: Search-Service
   kafka:
     bootstrap-servers: localhost:9092
     template:
