--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -108,6 +108,12 @@
             <artifactId>spring-kafka</artifactId>
             <version>3.0.7</version>
         </dependency>
+        <dependency>
+            <groupId>org.blossom</groupId>
+            <artifactId>grpc-utilities</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
