FEATURE: Create get posts by user functionality.

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
         - id: post-service
           uri: lb://post-service
           predicates:
-            - Path=/api/{version}/post
+            - Path=/api/{version}/post/**
           filters:
             - AuthenticationFilter
 
