--- a/social-graph-service/src/main/resources/application.yml
+++ b/social-graph-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: social-graph-service
+    name: Social-Graph-Service
   neo4j:
     uri: bolt://localhost:7687
     authentication:
