--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -109,7 +109,7 @@
             <version>3.0.7</version>
         </dependency>
         <dependency>
-            <groupId>org.blossom</groupId>
+            <groupId>org.blossom.common</groupId>
             <artifactId>grpc-utilities</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
