--- a/post-service/pom.xml
+++ b/post-service/pom.xml
@@ -70,7 +70,7 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>org.blossom</groupId>
+            <groupId>org.blossom.common</groupId>
             <artifactId>grpc-utilities</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
