FEATURE: Create grpc servers for obtaining followers and post metadata.

--- a/activity-service/pom.xml
+++ b/activity-service/pom.xml
@@ -67,6 +67,18 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.blossom.common</groupId>
+            <artifactId>grpc-utilities</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.blossom.common</groupId>
+            <artifactId>grpc-utilities</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
