--- a/image-grpc-service/pom.xml
+++ b/image-grpc-service/pom.xml
@@ -46,6 +46,12 @@
             <artifactId>s3</artifactId>
             <version>2.20.96</version>
         </dependency>
+        <dependency>
+            <groupId>org.blossom.common</groupId>
+            <artifactId>grpc-utilities</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
