--- a/activity-service/src/main/resources/application.yml
+++ b/activity-service/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
       repositories:
         enabled: false
   application:
-    name: Activity-Service
+    name: activity-service
   datasource:
     url: jdbc:postgresql://localhost:5431/postgres
     username: postgres
@@ -12,12 +12,8 @@ spring:
   flyway:
     baseline-on-migrate: true
   redis:
-    post-cache:
-      host: localhost
-      port: 6377
-    user-cache:
-      host: localhost
-      port: 6378
+    host: localhost
+    port: 6377
   kafka:
     bootstrap-servers: localhost:9092
     consumer:
