--- a/social-graph-service/src/main/resources/application.yml
+++ b/social-graph-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: Social-Graph-Service
+    name: social-graph-service
   neo4j:
     uri: bolt://localhost:7687
     authentication:
@@ -20,7 +20,7 @@ spring:
             type:
               mapping: event:org.blossom.model.ResourceEvent
 server:
-  port: 65
+  port: 9565
 grpc:
   server:
     port: 0
