BUGFIX: Fixed kafka consumer ids; Added support for Feed service.

--- a/activity-service/src/main/resources/application.yml
+++ b/activity-service/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
   kafka:
     bootstrap-servers: localhost:9092
     consumer:
-      group-id: postListenerId
+      group-id: activityListenerId
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.blossom.json.CustomResourceEventDeserializer
       properties:
