--- a/feed-service/src/main/resources/application.yml
+++ b/feed-service/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
   kafka:
     bootstrap-servers: localhost:9092
     consumer:
-      group-id: postListenerId
+      group-id: feedListenerId
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.blossom.json.CustomResourceEventDeserializer
       properties:
