--- a/social-graph-service/src/main/resources/application.yml
+++ b/social-graph-service/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   kafka:
     bootstrap-servers: localhost:9092
     consumer:
-      group-id: postListenerId
+      group-id: socialListenerId
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.blossom.json.CustomResourceEventDeserializer
       properties:
