FEATURE: Add caching mechanism for generic feed.

--- a/feed-service/src/main/resources/application.yml
+++ b/feed-service/src/main/resources/application.yml
@@ -21,6 +21,9 @@ spring:
               packages: "org.blossom.model"
             type:
               mapping: event:org.blossom.model.ResourceEvent
+  redis:
+    host: localhost
+    port: 6381
 grpc:
   server:
     names:
