IMPROVE: Add S3 facade to avoid real calls.

--- a/image-grpc-service/src/main/resources/application.yml
+++ b/image-grpc-service/src/main/resources/application.yml
@@ -12,7 +12,8 @@ grpc:
 aws:
   region: ${BLOSSOM_S3_REGION}
   s3:
-    mock: false
+    mock: true
+    path: ${BLOSSOM_S3_PATH}
     buckets:
       imageBucket: ${BLOSSOM_S3_BUCKET}
 server:
