FEATURE: Add websocket support; Add websocket broker relay; Add websocket message handling.

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -45,6 +45,20 @@ spring:
           filters:
             - AuthenticationFilter
 
+        - id: message-service-ws
+          uri: lb:ws://message-service
+          predicates:
+            - Path=/ws-chat/**
+          metadata:
+            websocket: true
+
+        - id: message-service
+          uri: lb://message-service
+          predicates:
+            - Path=/api/{version}/message/**, /api/{version}/chat/**
+          metadata:
+            websocket: true
+
         - id: discovery-server
           uri: http://localhost:8761
           predicates:
