FEATURE: Handle social follow kafka messages on message service to create private chats beforehand.

--- a/social-graph-service/src/main/resources/application.yml
+++ b/social-graph-service/src/main/resources/application.yml
@@ -8,6 +8,7 @@ spring:
       password: social-graph-service
   kafka:
     bootstrap-servers: localhost:9092
+    topic: social-follow-resource-event-message
     consumer:
       group-id: socialListenerId
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
