--- a/message-service/src/main/resources/application.yml
+++ b/message-service/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: message-service
   kafka:
     bootstrap-servers: localhost:9092
-    topics: message-resource-event-notification
+    topic: message-resource-event-notification
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
