BUGFIX: Added message service db migrations; Fixed repository queries; Fixed circular dependency.

--- a/message-service/src/main/resources/application.yml
+++ b/message-service/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 spring:
   application:
     name: message-service
+  datasource:
+    url: jdbc:postgresql://localhost:6386/postgres
+    username: postgres
+    password: rootmessage
   kafka:
     bootstrap-servers: localhost:9092
     topic: message-resource-event-notification
