FEATURE: Bootstrap notification service.

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>activity-service</module>
         <module>feed-service</module>
         <module>message-service</module>
+        <module>notification-service</module>
     </modules>
 
     <properties>
