--- a/message-service/src/main/resources/application.yml
+++ b/message-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: message-service
+    name: Message-Service
   datasource:
     url: jdbc:postgresql://localhost:6386/postgres
     username: postgres
@@ -29,7 +29,7 @@ broker:
   username: guest
   password: guest
 server:
-  port: 8187
+  port: 8207
 eureka:
   client:
     service-url:
