BUGFIX: Fixed property file to add new routes to gateway; Fixed notification and message services property files to update database and broker ports.

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -56,8 +56,18 @@ spring:
           uri: lb://message-service
           predicates:
             - Path=/api/{version}/message/**, /api/{version}/chat/**
+
+        - id: notification-service-ws
+          uri: lb:ws://notification-service
+          predicates:
+            - Path=/ws-notification/**
           metadata:
             websocket: true
+
+        - id: notification-service
+          uri: lb://notification-service
+          predicates:
+            - Path=/api/{version}/notification/message/**, /api/{version}/notification/follow/**
 
         - id: discovery-server
           uri: http://localhost:8761
