--- a/.github/workflows/compile-and-test.yml
+++ b/.github/workflows/compile-and-test.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -23,3 +22,12 @@ jobs:
       run: mvn -B package
     - name: log in to docker
       run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+    - name: build docker images
+      run: |
+        for module in env.MODULES; do
+          cd ./$module
+          docker build -t blossom-$module .
+          docker tag blossom-$module:latest blossom-$module:$(date +"%Y%m%d%H%M%S")
+          docker push blossom-$module
+          cd ..
+        done
