--- a/.github/workflows/compile-and-test.yml
+++ b/.github/workflows/compile-and-test.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ "master" ]
 
+env:
+  MODULES_ARR: ${{ vars.MODULES }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -24,7 +27,7 @@ jobs:
       run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
     - name: build docker images
       run: |
-        for module in ${ ${{ vars.MODULES }}[@] }; do
+        for module in ${MODULES_ARR[@]}; do
           cd ./$module
           docker build -t blossom-$module .
           docker tag blossom-$module:latest blossom-$module:$(date +"%Y%m%d%H%M%S")
