--- a/.github/workflows/compile-and-test.yml
+++ b/.github/workflows/compile-and-test.yml
@@ -30,58 +30,58 @@ jobs:
       run: |
         docker build -t bernardofmf/blossom-activity-service:$(git log -1 --pretty=%h) -t bernardofmf/blossom-activity-service:latest -f ./activity-service/Dockerfile ./activity-service/
         docker push bernardofmf/blossom-activity-service:$(git log -1 --pretty=%h)
-        docker push bernardofmf/blossom-activity-service:$latest
+        docker push bernardofmf/blossom-activity-service:latest
 
     - name: build docker image [api-gateway]
       run: |
         docker build -t bernardofmf/blossom-api-gateway:$(git log -1 --pretty=%h) -t bernardofmf/blossom-api-gateway:latest -f ./api-gateway/Dockerfile ./api-gateway/
         docker push bernardofmf/blossom-api-gateway:$(git log -1 --pretty=%h)
-        docker push bernardofmf/blossom-api-gateway:$latest
+        docker push bernardofmf/blossom-api-gateway:latest
 
     - name: build docker image [auth-service]
       run: |
         docker build -t bernardofmf/blossom-auth-service:$(git log -1 --pretty=%h) -t bernardofmf/blossom-auth-service:latest -f ./auth-service/Dockerfile ./auth-service/
         docker push bernardofmf/blossom-auth-service:$(git log -1 --pretty=%h)
-        docker push bernardofmf/blossom-auth-service:$latest
+        docker push bernardofmf/blossom-auth-service:latest
 
     - name: build docker image [discovery-server]
       run: |
         docker build -t bernardofmf/blossom-discovery-server:$(git log -1 --pretty=%h) -t bernardofmf/blossom-discovery-server:latest -f ./discovery-server/Dockerfile ./discovery-server/
         docker push bernardofmf/blossom-discovery-server:$(git log -1 --pretty=%h)
-        docker push bernardofmf/blossom-discovery-server:$latest
+        docker push bernardofmf/blossom-discovery-server:latest
 
     - name: build docker image [feed-service]
       run: |
         docker build -t bernardofmf/blossom-feed-service:$(git log -1 --pretty=%h) -t bernardofmf/blossom-feed-service:latest -f ./feed-service/Dockerfile ./feed-service/
         docker push bernardofmf/blossom-feed-service:$(git log -1 --pretty=%h)
-        docker push bernardofmf/blossom-feed-service:$latest
+        docker push bernardofmf/blossom-feed-service:latest
 
     - name: build docker image [image-service]
       run: |
         docker build -t bernardofmf/blossom-image-service:$(git log -1 --pretty=%h) -t bernardofmf/blossom-image-service:latest -f ./image-grpc-service/Dockerfile ./image-grpc-service/
         docker push bernardofmf/blossom-image-service:$(git log -1 --pretty=%h)
-        docker push bernardofmf/blossom-image-service:$latest
+        docker push bernardofmf/blossom-image-service:latest
 
     - name: build docker image [message-service]
       run: |
         docker build -t bernardofmf/blossom-message-service:$(git log -1 --pretty=%h) -t bernardofmf/blossom-message-service:latest -f ./message-service/Dockerfile ./message-service/
         docker push bernardofmf/blossom-message-service:$(git log -1 --pretty=%h)
-        docker push bernardofmf/blossom-message-service:$latest
+        docker push bernardofmf/blossom-message-service:latest
 
     - name: build docker image [notification-service]
       run: |
         docker build -t bernardofmf/blossom-notification-service:$(git log -1 --pretty=%h) -t bernardofmf/blossom-notification-service:latest -f ./notification-service/Dockerfile ./notification-service/
         docker push bernardofmf/blossom-notification-service:$(git log -1 --pretty=%h)
-        docker push bernardofmf/blossom-notification-service:$latest
+        docker push bernardofmf/blossom-notification-service:latest
 
     - name: build docker image [post-service]
       run: |
         docker build -t bernardofmf/blossom-post-service:$(git log -1 --pretty=%h) -t bernardofmf/blossom-post-service:latest -f ./post-service/Dockerfile ./post-service/
         docker push bernardofmf/blossom-post-service:$(git log -1 --pretty=%h)
-        docker push bernardofmf/blossom-post-service:$latest
+        docker push bernardofmf/blossom-post-service:latest
 
     - name: build docker image [social-graph-service]
       run: |
         docker build -t bernardofmf/blossom-social-graph-service:$(git log -1 --pretty=%h) -t bernardofmf/blossom-social-graph-service:latest -f ./social-graph-service/Dockerfile ./social-graph-service/
         docker push bernardofmf/blossom-social-graph-service:$(git log -1 --pretty=%h)
-        docker push bernardofmf/blossom-social-graph-service:$latest
+        docker push bernardofmf/blossom-social-graph-service:latest
