--- a/discovery-server/src/main/resources/application.yml
+++ b/discovery-server/src/main/resources/application.yml
@@ -1,6 +1,13 @@
+server:
+  port: 8761
+spring:
+  application:
+    name: Discovery-Server
 eureka:
+  instance:
+    hostname: localhost
   client:
     register-with-eureka: false
     fetch-registry: false
-server:
-  port: 8761
+    service-url:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka
