--- a/.github/workflows/compile-test-deploy.yml
+++ b/.github/workflows/compile-test-deploy.yml
@@ -32,9 +32,9 @@ jobs:
           image_tag=$(git log -1 --pretty=%h)
           for service in activity-service api-gateway auth-service discovery-server feed-service image-service message-service notification-service post-service social-graph-service; do
             echo "building and pushing docker image for $service"
-            docker build -t bernardofmf/blossom-$service:$image_tag -t bernardofmf/blossom-$service:latest -f ./$service/Dockerfile ./$service/
-            docker push bernardofmf/blossom-$service:$image_tag
-            docker push bernardofmf/blossom-$service:latest
+            docker build -t ${{ secrets.DOCKER_USERNAME }}/blossom-$service:$image_tag -t bernardofmf/blossom-$service:latest -f ./$service/Dockerfile ./$service/
+            docker push ${{ secrets.DOCKER_USERNAME }}/blossom-$service:$image_tag
+            docker push ${{ secrets.DOCKER_USERNAME }}/blossom-$service:latest
           done
         else
           echo "Skipping Docker image build on pull requests."
